<resources>
    <string name="app_name">exerciseone</string>
    <string name="clean_ads">Clean Ad-free\nexperience</string>
    <string name="choose_your_plan">Choose your plan</string>
    <string name="three_days_free">3 DAYS FREE</string>
    <string name="monthly">Monthly</string>
    <string name="price_month">23.000 đ/month</string>
    <string name="yearly">Yearly</string>
    <string name="price_year">89.950 đ/year</string>
    <string name="save">SAVE 60%</string>
    <string name="start_free">START FREE TRIAL</string>
    <string name="subscription">An auto-renewable subscription will be activates at the end of the\nselected period.\nOur Terms of Services applies to all purchases</string>
    <string name="term_of_services">Our Terms of Services applies to all purchases</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="home">HOME</string>
    <string name="Categories">CATEGORIES</string>
    <string name="featured">Featured</string>
    <string name="popular_collections">Popular Collections</string>
    <string name="popular">Popular</string>
    <string name="popular_search">Popular Search</string>
    <string name="color">Color</string>
    <string name="search">Search Zedge</string>
    <string name="ideals_for_you">Ideas for you</string>
    <string name="categories">Categories</string>
    <string name="see_more">SEE MORE</string>
    <string name="wall_paper">Wallpapers</string>
    <string name="video_wallpapers">Video Wallpapers</string>
    <string name="ringtones">Ringtones</string>
    <string name="notification">Notification Sounds</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="upload_content">Upload Content</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="information">Information</string>
    <string name="log_in">LOG IN</string>
    <string name="hinh_anh">Image</string>

</resources>