<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Layer3"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_dark_default_color_primary"
        tools:ignore="PrivateResource">

        <ImageView
            android:layout_marginTop="@dimen/define_dimen_35"
            android:layout_gravity="center"
            android:id="@+id/img_zeg"
            android:layout_width="@dimen/define_dimen_150"
            android:layout_height="@dimen/define_dimen_50"
            android:src="@drawable/zedge_logo_tm"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="@dimen/define_dimen_80"
            android:layout_height="@dimen/define_dimen_80"
            android:src="@drawable/ic_logo"
            tools:ignore="ContentDescription" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/define_dimen_10"
            android:text="@string/log_in"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_xnormal"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/define_dimen_15"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wall_paper"
        style="@style/text_navi" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_navi"
        android:text="@string/video_wallpapers" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ringtones"
        style="@style/text_navi" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        style="@style/text_navi"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/define_dimen_0.5"
        android:layout_marginTop="@dimen/define_dimen_15"
        android:background="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_ads"
        style="@style/text_navi" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_content"
        style="@style/text_navi"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/define_dimen_0.5"
        android:layout_marginTop="@dimen/define_dimen_15"
        android:background="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        style="@style/text_navi"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help"
        style="@style/text_navi"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/information"
        style="@style/text_navi" />
</LinearLayout>