<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:background="@color/Layer3"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_nested_categories"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginStart="@dimen/define_dimen_8"
            android:layout_marginTop="@dimen/define_dimen_14"
            android:fontFamily="@font/roboto_medium_numbers"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/popular_search"
            android:textSize="@dimen/text_size_xnormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_categories_searches"
            android:layout_marginTop="@dimen/define_dimen_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="@dimen/define_dimen_14"
            android:layout_marginStart="@dimen/define_dimen_8"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_medium_numbers"
            android:textColor="@color/white"
            android:text="@string/color"
            android:textSize="@dimen/text_size_xnormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_categories_colors"
            android:layout_marginTop="@dimen/define_dimen_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="@dimen/define_dimen_8"
            android:layout_marginTop="@dimen/define_dimen_14"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_medium_numbers"
            android:text="@string/ideals_for_you"
            android:textSize="@dimen/text_size_xnormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_categories_ideas"
            android:padding="@dimen/define_dimen_3"
            android:layout_marginTop="@dimen/define_dimen_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="@dimen/define_dimen_8"
            android:layout_marginTop="@dimen/define_dimen_14"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/categories"
            android:fontFamily="@font/roboto_medium_numbers"
            android:textSize="@dimen/text_size_xnormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_categories_category"
            android:padding="@dimen/define_dimen_3"
            android:layout_marginTop="@dimen/define_dimen_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>